Dark: Fix bad contrast in sidebar nav

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -61,7 +61,7 @@
 		--color-sidebar-divider: #4f4f4f;
 		--color-sidebar-bg: #171717;
 		--color-sidebar-bg-active: #242424;
-		--color-sidebar-link-active: #8f61e1;
+		--color-sidebar-link-active: #ae80ff;
 		--color-sidebar-link: #b0b0b0;
 		--color-footer-lang-divider: #444;
 		--color-footer-lang: #ae80ff;
@@ -128,7 +128,7 @@ html.dark {
 	--color-sidebar-divider: #4f4f4f;
 	--color-sidebar-bg: #171717;
 	--color-sidebar-bg-active: #242424;
-	--color-sidebar-link-active: #8f61e1;
+	--color-sidebar-link-active: #ae80ff;
 	--color-sidebar-link: #b0b0b0;
 	--color-footer-lang-divider: #444;
 	--color-footer-lang: #ae80ff;
